Update text and UI of all pivot cards (#2803)
* Update first observation pivot card

* Update second pivot card

* Change TenObservationCard description

* Update account creation pivot card

* More updates

* Fix tests

--- a/src/i18n/l10n/en.ftl.json
+++ b/src/i18n/l10n/en.ftl.json
@@ -42,7 +42,7 @@
   "All": "All",
   "All-observation-options": "All observation options (including iNaturalist AI Camera, Standard Camera, Uploading from Photo Library, and Sound Recorder)",
   "All-observations": "All observations",
-  "All-observations-submitted-to-iNaturalist-need-a-date-and-location": "All observations submitted to iNaturalist need a date and location to be useful to scientists. Please update observations if they need more information.",
+  "All-observations-need-a-date-and-location-to-be-used-for-science": "All observations need a date and location to be used for science. Please edit observations if they need more information.",
   "All-organisms": "All organisms",
   "all-rights-reserved": "all rights reserved",
   "All-taxa": "All taxa",
@@ -128,7 +128,7 @@
   "COMMUNITY-GUIDELINES": "COMMUNITY GUIDELINES",
   "Confidence--label": "Confidence",
   "CONFIRM": "CONFIRM",
-  "Congrats-on-making-your-first-observation": "Congrats on making your first observation!",
+  "Congratulations-You-made-your-first-observation": "Congratulations! You made your first observation!",
   "Connect-with-expert-naturalists": "Connect with expert naturalists",
   "Connect-with-other-naturalists": "Connect with other naturalists and engage in conversations.",
   "Connection-problem-Please-try-again-later": "Connection problem. Please try again later.",
@@ -302,7 +302,7 @@
   "GEOPRIVACY": "GEOPRIVACY",
   "Geoprivacy-status": "Geoprivacy: { $status }",
   "Get-an-instant-ID-of-any-plant-animal-fungus": "Get an instant ID of any plant, animal, or fungus",
-  "Get-identifications-from-real-people": "Get identifications from real people.",
+  "Get-feedback-from-naturalists-and-experts-who-will-help-verify": "Get feedback from naturalists and experts who will help verify and refine your identifications.",
   "Get-your-identification-verified-by-real-people": "Get your identification verified by real people in the iNaturalist community",
   "Getting-an-even-more-accurate-ID": "Getting an even more accurate ID...",
   "Go-back": "Go back",
@@ -311,13 +311,12 @@
   "Grant-Permission-title": "Grant Permission",
   "Group-Photos": "Group Photos",
   "Group-photos-onboarding": "Group photos into observations– make sure there is only one species per observation",
-  "Grow-your-collection": "Grow your collection",
   "HELP": "HELP",
+  "Help-create-Research-Grade-data-used-in-science-and-conservation": "Help create Research Grade data used in science and conservation.",
   "Help-protect-species": "Help protect species",
   "Hide": "Hide",
   "Highest": "Highest",
   "HIGHEST-RANK": "HIGHEST RANK",
-  "How-does-it-feel-to-identify": "How does it feel to identify and connect to the nature around you?",
   "I-agree-to-the-Terms-of-Use": "<0>I agree to the Terms of Use and Privacy Policy, and I have reviewed the Community Guidelines (</0><1>required</1><0>).</0>",
   "Iconic-taxon-name": "Iconic taxon name: { $iconicTaxon }",
   "ID-Suggestions": "ID Suggestions",
@@ -332,6 +331,7 @@
   "Identify-species-anywhere": "Identify species anywhere",
   "If-an-account-with-that-email-exists": "If an account with that email exists, we've sent password reset instructions to your email.",
   "If-you-have-an-existing-account-try-sign-in-reset": "If you have an existing iNat account, try signing in with your username and password, or try resetting your password using the email address associated with your account.",
+  "If-you-hold-down-instead-of-tapping-the-camera-button-you-can": "If you hold down (instead of tapping) the camera button, you can record sounds, take multiple photos, and import from your photo library.",
   "If-you-leave-x-of-your-observations-removed": "If you leave this traditional project, { $count ->\n  [one] 1 of your observations\n *[other] { $count } of your observations\n} will also be removed from this project.",
   "If-you-save-this-observation-and-upload-it-to-iNaturalist": "If you save this observation and upload it to iNaturalist, other people may be able to help identify it.",
   "If-you-want-to-collate-compare-promote": "If you want to collate, compare, or promote a set of existing projects, then an Umbrella project is what you should use. For example the 2018 City Nature Challenge, which collated over 60 projects, made for a great landing page where anyone could compare and contrast each city's observations. Both Collection and Traditional projects can be used in an Umbrella project, and up to 500 projects can be collated by an Umbrella project.",
@@ -395,6 +395,7 @@
   "Lat-Lon": "{ NUMBER($latitude, maximumFractionDigits: \"6\") }, { NUMBER($longitude, maximumFractionDigits: \"6\") }",
   "Lat-Lon-Acc": "Lat: { NUMBER($latitude, maximumFractionDigits: \"6\") }, Lon: { NUMBER($longitude, maximumFractionDigits: \"6\") }, Acc: { $accuracy }",
   "leading--identification": "Leading",
+  "Learn-from-people-who-verify-and-refine-your-identifications": "Learn from people who verify and refine your identifications.",
   "Learn-More": "Learn More",
   "LEARN-MORE-ABOUT-THIS-GROUP": "LEARN MORE ABOUT THIS GROUP",
   "LEARN-MORE-ABOUT-THIS-SPECIES": "LEARN MORE ABOUT THIS SPECIES",
@@ -519,7 +520,6 @@
   "OK": "OK",
   "Oldest-to-newest": "Oldest to newest",
   "Once-you-create-and-upload-observations": "Once you create & upload observations, other members of our community can add identifications to help your observations reach research grade.",
-  "Once-youve-uploaded-to-iNaturalist": "Once you’ve uploaded to iNaturalist, other naturalists in our community can help confirm your identifications. Keep an eye on your notifications for updates!",
   "Open": "Open",
   "OPEN-EMAIL": "OPEN EMAIL",
   "Open-menu": "Open menu.",
@@ -535,7 +535,6 @@
   "Organisms-that-are-identified-to-species": "Organisms that are identified to species rank or below",
   "Other": "Other",
   "OTHER-DATA": "OTHER DATA",
-  "Other-members-of-our-community-can-verify": "Other members of our community can verify and identify your observations if you upload them to iNaturalist.",
   "OTHER-SUGGESTIONS": "OTHER SUGGESTIONS",
   "PASSWORD": "PASSWORD",
   "PEOPLE--title": "PEOPLE",
@@ -695,7 +694,6 @@
   "Saved-Observation": "Saved observation, in queue to upload",
   "Scientific-Name": "Scientific Name",
   "Scientific-Name-Common-Name": "Scientific Name (Common Name)",
-  "Scientists-use-citizen-science-data": "Scientists use citizen science data just like yours to help better understand species across the globe.",
   "SEARCH": "SEARCH",
   "Search": "Search",
   "Search-for-a-project": "Search for a project",
@@ -798,6 +796,7 @@
   "The-AI-is-not-confident-It-may-be-one-of-the-IDs-below": "The AI is not confident. It may be one of the IDs below.",
   "The-AI-is-not-confident-Upload-to-ask-the-community": "The AI is not confident. Upload to ask the community.",
   "The-exact-location-will-be-hidden": "The exact location will be hidden publicly, and instead generalized to a larger area. (Threatened and endangered species are automatically obscured).",
+  "The-iNaturalist-community-will-help-verify-and-refine-identifications": "The iNaturalist community will help verify and refine identifications on your observations to create Research Grade data for science and conservation.",
   "The-iNaturalist-Network": "The iNaturalist network is a collection of localized websites that are fully connected to the global iNaturalist community. Network sites are supported by local institutions that promote local use and facilitate the use of data from iNaturalist to benefit local biodiversity.",
   "The-location-will-not-be-visible-to-others": "The location will not be visible to others, which might make the observation impossible to identify",
   "The-models-that-suggest-species": "The models that suggest species based on visual similarity and location are thanks in part to collaborations with Sara Beery, Tom Brooks, Elijah Cole, Christian Lange, Oisin Mac Aodha, Pietro Perona, and Grant Van Horn.",
@@ -835,10 +834,10 @@
   "Upload-Progress": "Upload { $uploadProgress } percent complete",
   "UPLOAD-TO-INATURALIST": "UPLOAD TO INATURALIST",
   "Upload-x-observations": "Upload { $count ->\n  [one] 1 observation\n *[other] { $count } observations\n}",
+  "Upload-your-observations-to-contribute-data-to-help-save-species": "Upload your observations to contribute data to help save species.",
   "Uploaded-via-application": "Uploaded via: { $application }",
   "Uploading-x-of-y": "Uploading { $currentUploadCount } of { $total }",
   "Uploading-x-of-y-observations": "{ $total ->\n  [one] Uploading { $currentUploadCount } observation\n *[other] Uploading { $currentUploadCount } of { $total } observations\n}",
-  "Use-iNaturalist-to-collect-any-kind-of": "Use iNaturalist to collect any kind of plant, insect, spider, bird, or other animal and add them to your observations!",
   "Use-iNaturalist-to-identify-any-living-thing": "Use iNaturalist to identify any living thing",
   "Use-iNaturalists-AI-Camera": "Use iNaturalist's AI Camera to identify organisms in real time",
   "USE-LOCATION": "USE LOCATION",
@@ -872,7 +871,6 @@
   "Watch-your-notifications-for-identifications": "Watch your notifications for identifications!",
   "We-are-not-confident-enough-to-make-a-top-ID-suggestion": "We’re not confident enough to make a top ID suggestion, but here are some other suggestions:",
   "Welcome-back": "Welcome back!",
-  "Weve-made-some-updates": "We've made some updates, so we recommend taking a look at your settings. You can always update these later.",
   "WHAT-IS-INATURALIST": "WHAT IS INATURALIST?",
   "Whats-more-by-recording": "What's more, by recording and sharing your observations, you'll create research-quality data for scientists working to better understand and protect nature. So if you like recording your findings from the outdoors, or if you just like learning about life, join us!",
   "When-tapping-the-green-observation-button": "When tapping the green observation button, open:",
@@ -920,8 +918,8 @@
   "You-can-also-check-out-merchandise": "You can also check out merchandise for iNaturalist and Seek at our store below!",
   "You-can-click-join-on-the-project-page": "You can click “join” on the project page.",
   "You-can-find-answers-on-our-help-page": "You can find answers on our help page.",
+  "You-can-now-upload-your-observations-to-iNaturalist-and-contribute": "You can now upload your observations to iNaturalist and contribute to global biodiversity research.",
   "You-can-only-add-20-photos-per-observation": "You can only add 20 photos per observation",
-  "You-can-record-sounds-take-multiple-photos-import": "You can record sounds, take multiple photos, import from your photo library, and more by holding down (instead of tapping) the camera button.",
   "You-can-still-share-the-file": "You can still share the file with another app. If you can email it, please send it to { $email }",
   "You-can-upload-this-observation-to-our-community": "You can upload this observation to our community to get an identification from a real person, and help our AI improve its identifications in the future",
   "You-changed-filters-will-be-discarded": "You changed filters, but they were not applied to your explore search results.",
@@ -931,10 +929,10 @@
   "You-likely-observed-a-new-species": "You likely observed a new species!",
   "You-likely-observed-a-species": "You likely observed a species",
   "You-likely-observed-an-organism-in-this-group": "You likely observed an organism in this group",
-  "You-make-an-observation-every-time-you": "You make an observation every time you take a picture of an organism with a date and location.",
   "You-may-have-observed-a-new-species": "You may have observed a new species!",
   "You-may-have-observed-a-species": "You may have observed a species",
   "You-may-have-observed-an-organism-in-this-group": "You may have observed an organism in this group",
+  "You-may-notice-changes-to-how-things-look-and-flow": "You may notice changes to how things look and flow. You can control your options in the settings.",
   "You-must-be-logged-in-to-view-messages": "You must be logged in to view messages",
   "You-must-install-Google-Play-Services-to-sign-in-with-Google": "You must install Google Play Services to sign in with Google.",
   "You-need-an-Internet-connection-to-do-that": "You need an Internet connection to do that.",
@@ -946,10 +944,9 @@
   "Your-donation-to-iNaturalist": "Your donation to iNaturalist supports the improvement and stability of the mobile apps and website that connects millions of people to nature and enables the protection of biodiversity worldwide!",
   "Your-email-is-confirmed": "Your email is confirmed! Please log in to continue.",
   "Your-location-uncertainty-is-over-x-km": "Your location uncertainty is over { $x } km, which is too high to be helpful to identifiers. Edit the location and zoom in until the accuracy circle turns green and is centered on where you observed the organism.",
-  "Your-observations-can-help-scientists": "Your observations can help scientists!",
-  "Your-observations-can-now-help-scientists": "Your observations can now help scientists.",
+  "Your-observations-can-help-science": "Your observations can help science!",
+  "Youre-ready-to-share-your-observations": "You’re ready to share your observations!",
   "Youve-denied-permission-prompt": "You’ve denied permission. Please grant permission in the settings app.",
-  "Youve-made-5-observations": "You’ve made 5 observations!",
   "Youve-previously-denied-camera-permissions": "You've previously denied camera permissions, so please enable them in settings.",
   "Youve-previously-denied-location-permissions": "You’ve previously denied location permissions, so please enable them in settings.",
   "Youve-previously-denied-microphone-permissions": "You’ve previously denied microphone permissions, so please enable them in settings.",
