Advanced settings UI updates (#2797)
* Open more options on long press

* Add tests for long press

* Rearranging Settings screen with new layout

* Add toggle for advanced settings in layout slice; fix default mode toggle

* Update settings with navigation flows

* Fix tests

* Change power mode switch for e2e test

* Fix settings test for green button toggle

* Fix advanced user toggle in e2e test (which hides pivot cards)

* Changes based on design convo; test fixes

* Fix e2e tests

* Follow user flow chart and update nav accordingly

* Rename function

* Fix test

* Can be null so check for false only

* Little less spacing between radio button rows

* Minor UI updates

* Remove check for previous setting in UI

* This is no longer used anywhere

* Update AICamera.test.js

* Update AICamera.test.js

* Update AICamera.test.js

* Update Suggestions.test.js

* Update Settings.test.js

* Update LanguageSettings.test.js

---------

Co-authored-by: Johannes Klein <johannes.t.klein@gmail.com>

--- a/src/i18n/l10n/en.ftl.json
+++ b/src/i18n/l10n/en.ftl.json
@@ -30,7 +30,7 @@
   "Add-optional-notes": "Add optional notes",
   "Adds-your-vote-of-agreement": "Adds your vote of agreement",
   "Adds-your-vote-of-disagreement": "Adds your vote of disagreement",
-  "Advanced--interface-mode-with-explainer": "Advanced (Upload multiple photos and sounds)",
+  "ADVANCED-SETTINGS": "ADVANCED SETTINGS",
   "Affiliation": "Affiliation: { $site }",
   "After-capturing-or-importing-photos-show": "After capturing or importing photos, show:",
   "Agree": "Agree",
@@ -40,7 +40,7 @@
   "AI-Camera": "AI Camera",
   "ALL": "ALL",
   "All": "All",
-  "All-observation-options": "All observation options (including iNaturalist AI Camera, Standard Camera, Uploading from Photo Library, and Sound Recorder)",
+  "All-observation-options--list": "All observation options: iNaturalist AI Camera, Standard Camera, Uploading from Photo Library, and Sound Recorder",
   "All-observations": "All observations",
   "All-observations-need-a-date-and-location-to-be-used-for-science": "All observations need a date and location to be used for science. Please edit observations if they need more information.",
   "All-organisms": "All organisms",
@@ -193,7 +193,6 @@
   "datetime-format-short": "M/d/yy h:mm a",
   "datetime-format-short-with-zone": "M/d/yy h:mm a zzz",
   "December": "December",
-  "Default--interface-mode": "Default",
   "DELETE": "DELETE",
   "Delete-all-observations": "Delete all observations",
   "Delete-comment": "Delete comment",
@@ -360,7 +359,6 @@
   "iNaturalist-is-supported-by-our-community": "iNaturalist is supported by our amazing community. From everyday naturalists who add observations and identifications, to curators who manage our taxonomy and help with moderation, to the volunteer translators who make iNaturalist more accessible to worldwide audiences, to our community-based donors, we are extraordinarily grateful to all the people in our community who make iNaturalist the platform it is.",
   "iNaturalist-mission-is-to-connect": "iNaturalist's mission is to connect people to nature and advance biodiversity science and conservation.",
   "INATURALIST-MISSION-VISION": "INATURALIST'S MISSION & VISION",
-  "INATURALIST-MODE": "INATURALIST MODE",
   "INATURALIST-NETWORK": "INATURALIST NETWORK",
   "INATURALIST-SETTINGS": "INATURALIST SETTINGS",
   "INATURALIST-STAFF": "{ $inaturalist } STAFF",
@@ -420,6 +418,7 @@
   "MAP": "MAP",
   "Map-Area": "Map Area",
   "March": "March",
+  "Match-Screen": "Match Screen",
   "maverick--identification": "Maverick",
   "May": "May",
   "MEDIA": "MEDIA",
@@ -494,7 +493,6 @@
   "Obscured": "Obscured",
   "Observation": "Observation",
   "Observation-Attribution": "Observation: © { $userName } · { $restrictions }",
-  "OBSERVATION-BUTTON": "OBSERVATION BUTTON",
   "Observation-Copyright": "Observation Copyright: © { $userName } · { $restrictions }",
   "Observation-has-no-photos-and-no-sounds": "This observation has no photos and no sounds.",
   "Observation-location-obscured-randomized-point": "This observation’s location is obscured. You are seeing a randomized point within the obscuration polygon.",
@@ -772,7 +770,6 @@
   "SUBMIT-ID-SUGGESTION": "SUBMIT ID SUGGESTION",
   "SUGGEST-ID": "SUGGEST ID",
   "Suggest-ID": "SUGGEST ID",
-  "SUGGESTIONS": "SUGGESTIONS",
   "supporting--identification": "Supporting",
   "Switches-to-tab": "Switches to { $tab } tab.",
   "Sync-observations": "Sync observations",
@@ -851,6 +848,7 @@
   "Using-location": "Using location",
   "Verified-IDs-are-used-for-science-and-conservation": "Verified IDs are used for science and conservation",
   "Version-app-build": "Version { $appVersion } ({ $buildVersion })",
+  "View-Advanced-Settings": "View Advanced Settings",
   "VIEW-ALL-X-PLACES": "VIEW ALL { $count } PLACES",
   "VIEW-ALL-X-PROJECTS": "VIEW ALL { $count } PROJECTS",
   "VIEW-ALL-X-TAXA": "VIEW ALL { $count } TAXA",
