--- a/src/i18n/l10n/en.ftl.json
+++ b/src/i18n/l10n/en.ftl.json
@@ -30,6 +30,7 @@
   "Add-optional-notes": "Add optional notes",
   "Adds-your-vote-of-agreement": "Adds your vote of agreement",
   "Adds-your-vote-of-disagreement": "Adds your vote of disagreement",
+  "Advanced-Settings": "Advanced Settings",
   "ADVANCED-SETTINGS": "ADVANCED SETTINGS",
   "Affiliation": "Affiliation: { $site }",
   "After-capturing-or-importing-photos-show": "After capturing or importing photos, show:",
@@ -848,7 +849,6 @@
   "Using-location": "Using location",
   "Verified-IDs-are-used-for-science-and-conservation": "Verified IDs are used for science and conservation",
   "Version-app-build": "Version { $appVersion } ({ $buildVersion })",
-  "View-Advanced-Settings": "View Advanced Settings",
   "VIEW-ALL-X-PLACES": "VIEW ALL { $count } PLACES",
   "VIEW-ALL-X-PROJECTS": "VIEW ALL { $count } PROJECTS",
   "VIEW-ALL-X-TAXA": "VIEW ALL { $count } TAXA",
