fix: improve accessibility labels & hints

--- a/src/i18n/l10n/en.ftl.json
+++ b/src/i18n/l10n/en.ftl.json
@@ -28,6 +28,7 @@
   "Add-observations": "Add observations",
   "ADD-OPTIONAL-COMMENT": "ADD OPTIONAL COMMENT",
   "Add-optional-notes": "Add optional notes",
+  "Adds-ID": "Adds ID",
   "Adds-your-vote-of-agreement": "Adds your vote of agreement",
   "Adds-your-vote-of-disagreement": "Adds your vote of disagreement",
   "Advanced-Settings": "Advanced Settings",
@@ -289,7 +290,6 @@
   "Filters": "Filters",
   "Flag-An-Item": "Flag An Item",
   "Flag-Item-Description": "Flagging brings something to the attention of volunteer site curators. Please don't flag problems you can address with identifications, the Data Quality Assessment, or by talking to the person who made the content.",
-  "Flag-Item-Other": "Flagged as Other Description Box",
   "Flag-Item-Other-Description": "Some other reason you can explain below.",
   "Flag-Item-Other-Input-Hint": "Specify the reason you're flagging this item",
   "Flagged": "Flagged",
@@ -647,6 +647,7 @@
   "Ranks-ZOOSUBSECTION": "ZOOSUBSECTION",
   "Ranks-Zoosubsection": "Zoosubsection",
   "Read-more-on-Wikipedia": "Read more on Wikipedia",
+  "Reason--flag": "Reason",
   "Record-a-sound": "Record a sound",
   "Record-animal-sounds": "Record animal sounds",
   "RECORD-NEW-SOUND": "RECORD NEW SOUND",
@@ -770,7 +771,6 @@
   "SUBMIT": "SUBMIT",
   "SUBMIT-ID-SUGGESTION": "SUBMIT ID SUGGESTION",
   "SUGGEST-ID": "SUGGEST ID",
-  "Suggest-ID": "SUGGEST ID",
   "supporting--identification": "Supporting",
   "Switches-to-tab": "Switches to { $tab } tab.",
   "Sync-observations": "Sync observations",
@@ -785,7 +785,6 @@
   "TEAM": "TEAM",
   "Terms-of-Use": "Terms of Use",
   "TERMS-OF-USE": "TERMS OF USE",
-  "Text-Box-to-Describe-Reason-for-Flag": "Text box to describe reason for flag.",
   "Thank-you-for-sharing-your-feedback": "Thank you for sharing your feedback to help us improve!",
   "Thanks-for-using-any-suggestions": "Thanks for using this app! Do you have any suggestions for the people who make it?",
   "That-email-is-already-associated-with-an-account": "That email is already associated with an account.",
