--- a/src/i18n/l10n/en.ftl.json
+++ b/src/i18n/l10n/en.ftl.json
@@ -31,7 +31,7 @@
   "Adds-ID": "Adds ID",
   "Adds-your-vote-of-agreement": "Adds your vote of agreement",
   "Adds-your-vote-of-disagreement": "Adds your vote of disagreement",
-  "Advanced-Settings": "Advanced Settings",
+  "Advanced-Mode": "Advanced Mode",
   "ADVANCED-SETTINGS": "ADVANCED SETTINGS",
   "Affiliation": "Affiliation: { $site }",
   "After-capturing-or-importing-photos-show": "After capturing or importing photos, show:",
