Change text on Match loading screen

--- a/src/i18n/l10n/en.ftl.json
+++ b/src/i18n/l10n/en.ftl.json
@@ -51,6 +51,7 @@
   "ALL-USERS-EXCEPT": "ALL USERS EXCEPT",
   "ALLOW-LOCATION-ACCESS": "ALLOW LOCATION ACCESS",
   "An-Internet-connection-is-required": "An Internet connection is required to load more observations.",
+  "Analyzing-for-the-best-identification": "Analyzing for the best identification...",
   "Any--date": "Any",
   "Any--establishment-means": "Any",
   "Any--media-type": "Any",
@@ -304,7 +305,6 @@
   "Get-an-instant-ID-of-any-plant-animal-fungus": "Get an instant ID of any plant, animal, or fungus",
   "Get-feedback-from-naturalists-and-experts-who-will-help-verify": "Get feedback from naturalists and experts who will help verify and refine your identifications.",
   "Get-your-identification-verified-by-real-people": "Get your identification verified by real people in the iNaturalist community",
-  "Getting-an-even-more-accurate-ID": "Getting an even more accurate ID...",
   "Go-back": "Go back",
   "Google-Play-Services-Not-Installed": "Google Play Services Not Installed",
   "GRANT-PERMISSION": "GRANT PERMISSION",
