Revert "Replace "NONE" with "ALL""
This reverts commit cf819acfc3e9bbce7944fb3c4b7bb6b5714829e1.

--- a/src/i18n/l10n/en.ftl.json
+++ b/src/i18n/l10n/en.ftl.json
@@ -477,6 +477,7 @@
   "No-results-found-try-different-search": "No results found. Try a different search or adjust your filters.",
   "no-rights-reserved-cc0": "no rights reserved (CC0)",
   "none--accuracy": "none",
+  "NONE--ranks": "NONE",
   "NOT-BY-ME": "NOT BY ME",
   "Not-enough-space-left-on-device": "Not enough space left on device",
   "Not-enough-space-left-on-device-try-again": "There is not enough storage space left on your device to do that. Please free up some space and try again.",
