Update Notifications tab string

--- a/src/i18n/l10n/en.ftl.json
+++ b/src/i18n/l10n/en.ftl.json
@@ -297,7 +297,6 @@
   "Flash": "Flash",
   "Flip-camera": "Flip camera",
   "FOLLOW": "FOLLOW",
-  "FOLLOWING--notifications": "FOLLOWING",
   "FOLLOWING-X-PEOPLE": "{ $count ->\n  [one] FOLLOWING { $count } PERSON\n *[other] FOLLOWING { $count } PEOPLE\n}",
   "Forgot-Password": "Forgot Password",
   "GEOPRIVACY": "GEOPRIVACY",
@@ -536,6 +535,7 @@
   "Other": "Other",
   "OTHER-DATA": "OTHER DATA",
   "OTHER-SUGGESTIONS": "OTHER SUGGESTIONS",
+  "OTHERS--notifications": "OTHERS",
   "PASSWORD": "PASSWORD",
   "PEOPLE--title": "PEOPLE",
   "Photo-importer": "Photo importer",
