Dismissable banner that opens login/signup

--- a/src/i18n/l10n/en.ftl.json
+++ b/src/i18n/l10n/en.ftl.json
@@ -50,6 +50,7 @@
   "All-taxa": "All taxa",
   "ALL-USERS-EXCEPT": "ALL USERS EXCEPT",
   "ALLOW-LOCATION-ACCESS": "ALLOW LOCATION ACCESS",
+  "Already-have-an-iNaturalist-account": "Already have an iNaturalist account?",
   "An-Internet-connection-is-required": "An Internet connection is required to load more observations.",
   "Analyzing-for-the-best-identification": "Analyzing for the best identification...",
   "Any--date": "Any",
