MOB-860 - empty states for user's followers/following/projects screens

--- a/src/i18n/l10n/en.ftl.json
+++ b/src/i18n/l10n/en.ftl.json
@@ -797,6 +797,9 @@
   "This-observation-needs-more-identifications-to-become-research-grade": "This observation needs more identifications to become research grade.",
   "This-observer-has-opted-out-of-the-Community-Taxon": "This observer has opted out of the Community Taxon",
   "This-organism-was-placed-by-humans": "This organism was placed in this location by humans. This applies to things like garden plants, pets, and zoo animals.",
+  "This-user-has-no-followers": "This user has no followers.",
+  "This-user-has-not-joined-any-projects": "This user has not joined any projects.",
+  "This-user-is-not-following-anyone": "This user is not following anyone.",
   "To-sync-your-observations-to-iNaturalist": "To sync your observations to iNaturalist, please log in.",
   "To-view-nearby-organisms-please-enable-location": "To view nearby organisms, please enable location.",
   "To-view-nearby-projects-please-enable-location": "To view nearby projects, please enable location.",
