update accessibility hint

--- a/src/i18n/l10n/en.ftl.json
+++ b/src/i18n/l10n/en.ftl.json
@@ -436,6 +436,7 @@
   "Navigates-to-bulk-importer": "Navigates to bulk importer",
   "Navigates-to-camera": "Navigates to camera",
   "Navigates-to-explore": "Navigates to explore",
+  "Navigates-to-main-menu": "Navigates to main menu.",
   "Navigates-to-match-screen": "Navigates to match screen",
   "Navigates-to-notifications": "Navigates to notifications",
   "Navigates-to-observation-details": "Navigates to observation details screen",
@@ -516,7 +517,6 @@
   "Opens-AI-camera": "Opens AI camera.",
   "Opens-edit-comment-form": "Opens edit comment form.",
   "Opens-location-permission-prompt": "Opens location permission prompt",
-  "Opens-the-side-drawer-menu": "Opens the side drawer menu.",
   "OR-SIGN-IN-WITH": "OR SIGN IN WITH",
   "Or-you-can-try-to-get-a-clearer-photo-by-zooming-in-getting-closer": "Or, you can try to get a clearer photo by zooming in, getting closer, or trying a different angle.",
   "Organism-is-captive": "Organism is captive",
