improve accessibility for menu header

--- a/src/i18n/l10n/en.ftl.json
+++ b/src/i18n/l10n/en.ftl.json
@@ -436,6 +436,7 @@
   "Navigates-to-bulk-importer": "Navigates to bulk importer",
   "Navigates-to-camera": "Navigates to camera",
   "Navigates-to-explore": "Navigates to explore",
+  "Navigates-to-log-in-screen": "Navigates to log in screen",
   "Navigates-to-main-menu": "Navigates to main menu.",
   "Navigates-to-match-screen": "Navigates to match screen",
   "Navigates-to-notifications": "Navigates to notifications",
@@ -716,7 +717,6 @@
   "Show-observation-options": "Show observation options.",
   "Showing-offline-search-results--taxa": "Showing offline search results. To search for more species, try again when connected to the Internet.",
   "Shows-identification-suggestions": "Shows identification suggestions",
-  "Shows-iNaturalist-bird-logo": "Shows iNaturalist bird logo.",
   "Shows-observation-creation-options": "Shows observation creation options",
   "Sign-in-with-Apple": "Sign in with Apple",
   "Sign-in-with-Apple-Failed": "Sign in with Apple Failed",
