add copy to translations

--- a/src/i18n/l10n/en.ftl.json
+++ b/src/i18n/l10n/en.ftl.json
@@ -99,7 +99,9 @@
   "Change-date": "Change date",
   "CHANGE-END-DATE": "CHANGE END DATE",
   "Change-end-date": "Change end date",
+  "Change-observations-sort-order": "Change observations sort order",
   "Change-project": "Change project",
+  "Change-species-sort-order": "Change species sort order",
   "CHANGE-START-DATE": "CHANGE START DATE",
   "Change-start-date": "Change start date",
   "Change-taxon": "Change taxon",
@@ -166,6 +168,8 @@
   "Data-quality-assessment-title-research": "This observation is Research Grade!",
   "DATE": "DATE",
   "Date": "Date",
+  "Date-Added-Newest-Default": "Date Added: Newest (Default)",
+  "Date-Added-Oldest": "Date Added: Oldest",
   "date-format-long": "PP",
   "date-format-month-day": "MMM d",
   "date-format-month-year": "MMM yyyy",
@@ -174,7 +178,9 @@
   "Date-observed": "Date observed",
   "Date-observed-header-short": "Observed",
   "DATE-OBSERVED-NEWEST": "DATE OBSERVED - NEWEST TO OLDEST",
+  "Date-Observed-Newest": "Date Observed: Newest",
   "DATE-OBSERVED-OLDEST": "DATE OBSERVED - OLDEST TO NEWEST",
+  "Date-Observed-Oldest": "Date Observed: Oldest",
   "Date-Range": "Date Range",
   "DATE-RANGE": "DATE RANGE",
   "date-to-date": "{ $d1 } - { $d2 }",
@@ -390,6 +396,7 @@
   "Learn-More": "Learn More",
   "LEARN-MORE-ABOUT-THIS-GROUP": "LEARN MORE ABOUT THIS GROUP",
   "LEARN-MORE-ABOUT-THIS-SPECIES": "LEARN MORE ABOUT THIS SPECIES",
+  "Least-Observed": "Least Observed",
   "LEAVE": "LEAVE",
   "LEAVE-PROJECT": "LEAVE PROJECT",
   "LEAVE-PROJECT--question": "LEAVE PROJECT?",
@@ -427,6 +434,7 @@
   "More-info": "More info",
   "MOST-FAVED": "MOST FAVED",
   "Most-faved": "Most faved",
+  "Most-Observed-Default": "Most Observed (Default)",
   "MY-CONTENT--notifications": "MY CONTENT",
   "My-Observations": "My Observations",
   "My-Observations--bottom-tab": "Me",
@@ -496,8 +504,12 @@
   "OBSERVATION-WAS-DELETED": "OBSERVATION WAS DELETED",
   "Observation-with-no-evidence": "Observation with no evidence",
   "Observations": "Observations",
+  "Observations-added-least-recently-appear-first": "Observations added least recently appear first",
+  "Observations-added-recently-appear-first": "Observations added recently appear first",
   "Observations-need-location-date--warning": "iNaturalist observations need a location and date to be useful to scientists. Please check observations with this icon before uploading.",
   "Observations-View": "Observations View",
+  "Observations-with-the-most-recent-date-appear-first": "Observations with the most recent date appear first",
+  "Observations-with-the-oldest-date-appear-first": "Observations with the oldest date appear first",
   "OBSERVATIONS-WITHOUT-NUMBER": "{ $count ->\n  [one] OBSERVATION\n *[other] OBSERVATIONS\n}",
   "OBSERVE-ORGANISMS": "OBSERVE ORGANISMS",
   "OBSERVED-AT--label": "OBSERVED AT",
@@ -729,8 +741,8 @@
   "Sorry-we-dont-know-how-to-open-that-URL": "Sorry, we don't know how to open that URL: { $url }",
   "SORT-BY": "SORT BY",
   "Sort-by": "Sort by",
-  "Sort-observations": "Sort observations",
-  "Sort-species": "Sort species",
+  "SORT-OBSERVATIONS": "SORT OBSERVATIONS",
+  "SORT-SPECIES": "SORT SPECIES",
   "sound-playback-separator": "/",
   "Sound-recorder": "Sound recorder",
   "sound-recorder-help-A-recording-of": "A recording of 5-15 seconds is best to help identifiers.",
@@ -745,6 +757,8 @@
   "Source-List": "<0>(Source List: </0><1>{ $source }</1><0>)</0>",
   "Species": "Species",
   "Species-View": "Species View",
+  "Species-with-the-least-observations-appear-first": "Species with the least observations appear first",
+  "Species-with-the-most-observations-appear-first": "Species with the most observations appear first",
   "SPECIES-WITHOUT-NUMBER": "{ $count ->\n  [one] SPECIES\n *[other] SPECIES\n}",
   "Standard--map-type": "Standard",
   "Start-must-be-before-end": "The start date must be before the end date.",
