Route to a new screen that shows the new native view

--- a/src/i18n/l10n/en.ftl.json
+++ b/src/i18n/l10n/en.ftl.json
@@ -458,6 +458,7 @@
   "Needs-ID--quality-grade": "Needs ID",
   "New-Observation": "New Observation",
   "Newest-to-oldest": "Newest to oldest",
+  "NEWS": "NEWS",
   "Next-observation": "Next observation",
   "Next-slide": "Next slide",
   "No-Camera-Available": "No Camera Available",
